--- a/CS105 Assessment 1 Scenario 2/CS105 Assessment 1 Scenario 2.vcxproj
+++ b/CS105 Assessment 1 Scenario 2/CS105 Assessment 1 Scenario 2.vcxproj
@@ -128,7 +128,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="CS105 Assessment 1 Scenario 2.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="mage.cpp" />
+    <ClCompile Include="player.cpp" />
+    <ClCompile Include="priest.cpp" />
+    <ClCompile Include="warrior.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="mage.h" />
+    <ClInclude Include="player.h" />
+    <ClInclude Include="priest.h" />
+    <ClInclude Include="warrior.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
