--- a/CS105 Assessment 1 Scenario 2/CS105 Assessment 1 Scenario 2.vcxproj
+++ b/CS105 Assessment 1 Scenario 2/CS105 Assessment 1 Scenario 2.vcxproj
@@ -24,7 +24,7 @@
     <ProjectGuid>{7b986995-0f33-4f5a-b4cc-4b6daa43c833}</ProjectGuid>
     <RootNamespace>CS105Assessment1Scenario2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>main.cpp</ProjectName>
+    <ProjectName>CS105 Assessment 1 Scenario 2</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
